# sentier-ps-2-gpx

./: Dockerfile  Dockerfile-local  Makefile  README.md  pyproject.toml  requirements.txt
src/: app.py
src/html/: index.html
src/static/js/: main.js
