[tool.poetry]
name = "sentier-ps-2-gpx"
version = "0.1.0"
description = "Convertiseur des sentiers de randonnées (Province Sud) en fichier gpx"
authors = ["Florent CHEVALIER <florent.chevalier@gouv.nc>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
